--- a/game.html
+++ b/game.html
@@ -67,8 +67,13 @@
                     <p>Loading...</p>
                 </div>
             </div>
+
         </main>
-  
+        <footer class="footer">
+            <div class="">
+                <a class="volver" href="index.html">VOLVER</a>   
+            </div>
+        </footer>
     </div>
       <audio
         src="js/sonidos/acierto.mp3"
