ultimos cambios deploy

--- a/game.html
+++ b/game.html
@@ -12,13 +12,7 @@
 </head>
 <body>
     <div class="fondo">
-        <!-- <div id="bienvenida" class="bienvenida">
-            <h1>☠️ Rick And Mory ☠️</h1>
-            <h4> ¡Memory Game! </h4>
-            <div class="bienvenida-botones">
-            <button type="submit">¡Play!</button>
-            </div>
-        </div> -->
+
         <header class="cabecera">
             <div class="contadores">
             <div class="contador-item">
@@ -71,9 +65,9 @@
         </main>
         <footer class="footer">
             <div class="">
-                <a class="volver" href="index.html">VOLVER</a>   
+              <a class="volver" href="index.html"><span class="arrow"></span></a>
             </div>
-        </footer>
+        </footer>         
     </div>
       <audio
         src="js/sonidos/acierto.mp3"
